# supa-n8n-adk-flut-fast-firbse-gcloud

./: .cursorrules  .dockerignore  .env.local.example  .envrc  .envrc.local.example  .eslintrc.js  .gitignore  .mise.toml  CHANGELOG.md  CODE_REVIEW_REPORT.md  COMPLETE_AUDIT_REPORT.md  CURSOR_TASKS.md  Justfile  NEXT_STEPS.md  QUICK_START.md  README.md  REPOSITORY_STATUS.md  SECURITY_AUDIT_REPORT.md  SESSION_SUMMARY.md  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  new-approach.md  package.json  pnpm-lock.yaml  storage.rules  tsconfig.json  turbo.json
.changeset/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-flutter.yml  ci.yml  deploy-agents.yml  deploy-web.yml
apps/agents/: .env.example  .pre-commit-config.yaml  pyproject.toml
apps/agents/app/: __init__.py  main.py
apps/agents/app/agents/: core_agent.py
apps/agents/app/api/v1/: agents.py  chat.py  health.py
apps/agents/app/core/: config.py  dependencies.py  exceptions.py  firebase_admin.py  logger.py  middleware.py
apps/agents/app/models/: agent.py  message.py
apps/agents/app/services/: adk_service.py  agent_service.py
apps/agents/app/tools/: firestore_tools.py
apps/agents/tests/: test_main.py
apps/mobile/: analysis_options.yaml  pubspec.yaml
apps/web/: middleware.ts  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  tsconfig.json  vitest.config.ts
docs/: PERFORMANCE.md  architecture.md  code-review.md  contributing.md  deployment.md  git-workflow.md  setup.md
docs/decisions/: 0001-use-justfile-for-commands.md  0002-local-dev-with-firebase-emulators.md  0003-simplified-stack-nextjs-fastapi-only.md  0004-docker-for-fastapi-local-dev.md  0005-use-mise-and-direnv.md  0006-use-orbstack-over-docker-desktop.md  README.md
infra/ci/: .gitkeep
scripts/: README.md  benchmark.sh  verify-m4.sh
(+49 files in other folders)
